trying to fix collection-see-all from overflowing on mobile #3

--- a/css/sass/media_queries/_media_queries.scss
+++ b/css/sass/media_queries/_media_queries.scss
@@ -83,9 +83,8 @@
         padding-bottom: 20px !important;
     }
     .content {
-        padding: 20px 20px 0;
-        margin: 0;
-        width: 100%;
+        margin: 20px 20px 0;
+        padding: 0;
     }
     .col {
         display: block;
@@ -132,8 +131,8 @@
 
     .collection-see-all {
         padding: 0;
-        width: auto;
-        max-width: 100%;
+        width: 100%;
+        min-width: 0;
         margin-bottom: 20px;
     }
 
